{
    "name": "InputControls",
    "maps": [
        {
            "name": "Touch",
            "id": "19d930c2-7df1-47ce-a290-ad48b542e0aa",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "16fe3c4e-ec37-4fbe-a670-b3263122aca4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c43bde95-0088-418d-9159-11fe707d92b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "5ff4a895-a86e-4251-a81f-0a30fef0c5b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "927f74c3-a9b3-4760-87b2-dff0add9551c",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edd5b7e2-ba98-40ab-bd97-fd5089d24e95",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd99d143-8f6d-4e8e-9588-31f05b122c7f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}